Avoid content spillage

--- a/src/assets/sass/modules/_grid.scss
+++ b/src/assets/sass/modules/_grid.scss
@@ -8,6 +8,7 @@
 
 .layout-container {
     display: grid;
+    overflow: auto; // Avoid content spillage.
     grid-template-columns: repeat(12, 1fr);
     grid-gap: 0 2em;
 }
